2011-07-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c (menu_toggle_timer): Do not change project state
	if it already matches the menu item state. Avoid infinite loop
	when starting/stoping project timer.

	* src/toolbar.c (toolbar_toggle_timer): added function to handle
	toolbar button differently from the menu toggle timer menu item.

2011-07-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c (status_icon_menuitem_visibility): removed
	direct reference to GTK struct data members in order to make it
	buildable with the -DGSEAL_ENABLE option.

	* src/active-dialog.c, glade/active.glade: Use GtkComboBox instead
	of GtkOptionMenu in the start project dialog.

2011-07-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/toolbar.c, src/status-icon.c, src/prefs.c, src/notes-area.c,
	src/menus.c, src/menucmd.c, src/main.c, src/gconf-io.c, src/app.c:
	Removed direct 	references to private GTK struct members in order
	to make it buildable with the -DGSEAL_ENABLE option.

2011-03-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/Makefile.am (gnotime_LDADD): Added -lX11, fixing build with
	binutils-gold.

2010-11-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (backups_exist): Added function to check if there are
	backup files in the data directory.
	(try_restoring_backup): check if there are backups in the data dir
	before offering to load a backup file.

2010-11-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (try_restoring_backup): Display error message when
	it's not possible to copy backup file.

2010-10-12  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/main.c (try_restoring_backup): do the interaction with the
	user for backup restoring outside of the read_data function.

2010-09-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/journal.glade: Fixed button tooltips

2010-05-05  Goedson Teixeira Paixao  <goedson@debian.org>
